# mycode_test

./: .gitignore
01_c_code/01_mysh/: hello.pid  hello_pid.c  main.c  mysh
01_c_code/02_global_var/: CMakeLists.txt  main.cpp
01_c_code/03_enum2string/: main.cpp
02_cpp_code/01_hello_docker/: CMakeLists.txt  main.cpp  main_assembly.s  main_preprocessed.cpp
02_cpp_code/02_my_tiny_tetris/: my_tiny_tetris.cpp
02_cpp_code/02_my_tiny_tetris/doc/: my_tiny_tetris.md
02_cpp_code/02_my_tiny_tetris/test/: CMakeLists.txt  num_test.cpp
02_cpp_code/02_my_tiny_tetris/tiny_tetris/: CMakeLists.txt
02_cpp_code/02_my_tiny_tetris/tiny_tetris/include/: tiny_tetris.h
02_cpp_code/02_my_tiny_tetris/tiny_tetris/src/: tiny_tetries.cpp
02_cpp_code/03_ncurses_use/: CMakeLists.txt  color_word.cpp  main.cpp  set_frame.cpp
02_cpp_code/04.macro_use/: CMakeLists.txt  main.cpp
02_cpp_code/04.macro_use/task/: CMakeLists.txt  task.cpp  task.h
02_cpp_code/05_multiTread/RAII_thread/: main.cpp
02_cpp_code/05_multiTread/mutex_thread/: CMakeLists.txt  main.cpp
02_cpp_code/05_multiTread/producter-consumer/: main.cpp
02_cpp_code/05_multiTread/thread_basic/: main.cpp
03_rust_code/02_software_craftsman/: readme.md
03_rust_code/02_software_craftsman/enum_define_6_1/: Cargo.toml
03_rust_code/02_software_craftsman/enum_option_6_2/: Cargo.toml
03_rust_code/02_software_craftsman/guess_game_2_1/: Cargo.toml
03_rust_code/02_software_craftsman/hashmap_8_5/: Cargo.toml
03_rust_code/02_software_craftsman/lifetime_10_5/: Cargo.toml
03_rust_code/02_software_craftsman/package_crate_module_7_1/: Cargo.toml
03_rust_code/02_software_craftsman/slice_4_3/: Cargo.toml
03_rust_code/02_software_craftsman/string_8_3/: Cargo.toml
03_rust_code/02_software_craftsman/struct_5_1/: Cargo.toml
03_rust_code/02_software_craftsman/struct_5_2/: Cargo.toml
03_rust_code/02_software_craftsman/trait_10_3/: Cargo.toml
03_rust_code/02_software_craftsman/variable_3_1/: Cargo.toml
03_rust_code/02_software_craftsman/vector_8_1/: Cargo.toml
04_leetcode/125_Valid_Palindrome/cpp_map/: CMakeLists.txt
04_leetcode/14_Longest_Common_Prefix/cpp_project/: main.cpp
04_leetcode/14_Longest_Common_Prefix/rust_pro_1/: Cargo.toml
04_leetcode/14_Longest_common_Prefix_divide/cpp_project/: CMakeLists.txt  main.cpp
04_leetcode/189_rotate_array/cpp_map/: main.cpp
04_leetcode/1_Two_Sum/cpp_map/: main.cpp
04_leetcode/724_Find_Pivot_Index/cpp_project/: CMakeLists.txt  main.cpp
04_leetcode/724_Find_Pivot_Index/cpp_project/solution/: solution.cpp  solution.h
04_leetcode/724_Find_Pivot_Index/cpp_project/test/: CMakeLists.txt  solutionTest.cpp
(+69 files in other folders)
